--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,10 @@ body, html{
     display: block;
 }
 
+.show{
+    display:block
+}
+
 #image-slider-box{
     height: 30%;
     width: 100%;
@@ -85,7 +89,8 @@ body, html{
 
 .image{
     height: 350px;
-    width: 400px;
+    width: 600px;
+    border: 2px solid white;
     display: none;
 }
 
@@ -105,15 +110,17 @@ body, html{
     top: 30%;
     left: 10px;
     font-weight: 700;
-  }
-  .navigation .next {
+}
+
+.navigation .next {
     right: 10px;
     position: absolute;
     font-size: 25px;
     z-index: 10;
     top: 30%;
-  }
-  .navigation .nav-btn {
+}
+  
+.navigation .nav-btn {
     background: rgba(255, 255, 255, 0.55);
     cursor: pointer;
     border-radius: 50%;
@@ -124,7 +131,37 @@ body, html{
     align-items: center;
     padding: 5px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
-  }
-  .navigation .nav-btn:hover {
+}
+
+.navigation .nav-btn:hover {
     background: white;
+  }
+
+.image-nav-bar{
+    height: 20px;
+    width: 100px;
+    position: absolute;
+    right: 47%;
+    z-index: 10;
+    top: 58%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .image-nav-dot{
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    border: none;
+    background-color: white;
+  }
+
+  .image-nav-dot:hover{
+      background-color: rgb(197, 197, 197);
+  }
+
+  .active{
+      background-color: grey;
   }
