--- a/src/styles.css
+++ b/src/styles.css
@@ -73,9 +73,12 @@ body, html{
 }
 
 #image-slider-box{
-    height: 30%;
+    height: 40%;
     width: 100%;
     background-color: rgb(221, 214, 214);
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .image-slider{
@@ -139,9 +142,9 @@ body, html{
 
 .image-nav-bar{
     height: 20px;
-    width: 100px;
+    width: 150px;
     position: absolute;
-    right: 47%;
+    right: 40%;
     z-index: 10;
     top: 58%;
     display: flex;
